<resources>
    <string name="app_name">Droplet</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="lender_login">Lender Login</string>
    <string name="victim_login">Victim Login</string>
    <string name="create_account">Create an Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_victim_control">VictimControlActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_lender_control">LenderControlActivity</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="lender">Lender</string>
    <string name="victim">Victim</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="ssn">SSN</string>
    <string name="create_account_simple">Create Account</string>
    <string name="email">Email</string>
    <string name="title_activity_lender_control_panel">LenderControlPanelActivity</string>
    <string name="name_placeholder">{NAME}</string>
</resources>
