<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hurricane_bg" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundImage"
        app:layout_constraintStart_toStartOf="@+id/backgroundImage"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/signupUsernameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/username"
                    app:layout_constraintStart_toStartOf="@+id/signupUsernameField"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/signupUsernameField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupUsernameLabel" />

                <TextView
                    android:id="@+id/signupNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/first_name"
                    app:layout_constraintStart_toStartOf="@+id/signupNameField"
                    app:layout_constraintTop_toBottomOf="@+id/signupUsernameField" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/signupNameField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupNameLabel" />

                <TextView
                    android:id="@+id/signupLastNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/last_name"
                    app:layout_constraintStart_toStartOf="@+id/signupLastNameField"
                    app:layout_constraintTop_toBottomOf="@+id/signupNameField" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/signupLastNameField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupLastNameLabel" />

                <TextView
                    android:id="@+id/signupPasswordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/password"
                    app:layout_constraintStart_toStartOf="@+id/signupPasswordField"
                    app:layout_constraintTop_toBottomOf="@+id/signupLastNameField" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/signupPasswordField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signupPasswordLabel" />

                <RadioGroup
                    android:id="@+id/userType"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/signupPasswordField"
                    app:layout_constraintTop_toBottomOf="@+id/signupPasswordField">

                    <RadioButton
                        android:id="@+id/userTypeLender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/lender" />

                    <RadioButton
                        android:id="@+id/userTypeVictim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/victim" />

                </RadioGroup>

                <TextView
                    android:id="@+id/addressl1Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:text="@string/address_line_1"
                    app:layout_constraintStart_toStartOf="@+id/addressl1Field"
                    app:layout_constraintTop_toBottomOf="@+id/userType" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addressl1Field"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressl1Label" />

                <TextView
                    android:id="@+id/addressl2Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:text="@string/address_line_2"
                    app:layout_constraintStart_toStartOf="@+id/addressl2Field"
                    app:layout_constraintTop_toBottomOf="@+id/addressl1Field" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/addressl2Field"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressl2Label" />

                <TextView
                    android:id="@+id/ssnLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:text="@string/ssn"
                    app:layout_constraintStart_toStartOf="@+id/ssnField"
                    app:layout_constraintTop_toBottomOf="@+id/addressl2Field" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ssnField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ssnLabel" />

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:layout_weight="1"
                    android:text="Email"
                    app:layout_constraintStart_toStartOf="@+id/emailField"
                    app:layout_constraintTop_toBottomOf="@+id/ssnField" />

                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/white"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

                <Button
                    android:id="@+id/createAccountFinalizeButton"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="14dp"
                    android:background="@android:color/white"
                    android:backgroundTint="@android:color/white"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/log_in"
                    android:textColor="@android:color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailField" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
